# Lab4

./: .gitignore  CMakeLists.txt
ICollection/: String.cpp  String.h
Logica/controlador/: SistemaControlador.cpp  SistemaControlador.h
Logica/dominio/: Cliente.cpp  Cliente.h  DTCategoria.cpp  DTCategoria.h  DTCliente.cpp  DTCliente.h  DTDomicilio.cpp  DTDomicilio.h  DTFecha.cpp  DTFecha.h  DTProducto.cpp  DTProducto.h  DTPromocion.cpp  DTPromocion.h  DTRequiere.cpp  DTRequiere.h  DTUsuario.cpp  DTUsuario.h  DTVendedor.cpp  DTVendedor.h  Producto.cpp  Producto.h  Promocion.cpp  Promocion.h  Requiere.cpp  Requiere.h  Sistema.cpp  Sistema.h  Usuario.cpp  Usuario.h  Vendedor.cpp  Vendedor.h
Logica/interfaceSistema/: ISistema.h
menu/: menu.cpp  menu.h
presentacion/: Login.cpp  Login.h  PProducto.cpp  PProducto.h  PPromocion.cpp  PPromocion.h  PUsuario.cpp  PUsuario.h
src/: main.cpp
